--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           dotnet-version: |
             5.0.*
+          source-url: "https://nuget.pkg.github.com/dodopizza/index.json"
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Nuget packages
         run: dotnet build src/allure-nunit/ --configuration Release
